Many changes, again.
Read CHANGELOG.md